# xls21c

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  dllmain.cpp  patch_libxls.py  stdafx.h  version.h  version_str.h  xls21c.def  xls21c.rc  xls21c_addin.cpp  xls21c_addin.h  xls_helper.c  xls_helper.h  xlsx_reader.cpp  xlsx_reader.h
