cmake_minimum_required(VERSION 3.15...4.3)
set(CMAKE_POLICY_VERSION_MINIMUM "3.5" CACHE STRING "")
project("xls21c")

if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
    set(MSVC_COMPILER ON)
elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
    set(CLANG_COMPILER ON)
elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
    set(GCC_COMPILER ON)
endif()

option(XLS21C_STATIC_RUNTIME "Static runtime libraries" ON)

if (MSVC_COMPILER)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_FLAGS "/EHs /utf-8 /Zc:strictStrings /W3")
    set(CMAKE_CXX_FLAGS_RELEASE "/O3 /GS- /DNDEBUG /GL")
    set(CMAKE_CXX_FLAGS_DEBUG "/Zi /Ob0 /Od /D_DEBUG /RTC1")
    set(CMAKE_C_FLAGS "/EHs /utf-8 /W3")
    set(CMAKE_C_FLAGS_RELEASE "/O3 /GS- /DNDEBUG /GL")
    set(CMAKE_C_FLAGS_DEBUG "/Zi /Ob0 /Od /D_DEBUG /RTC1")
    set(CMAKE_POLICY_DEFAULT_CMP0091 NEW)
    if (XLS21C_STATIC_RUNTIME)
        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
    else()
        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDll$<$<CONFIG:Debug>:Debug>")
    endif()
elseif (GCC_COMPILER)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_FLAGS "-fPIC -Wall -Wextra")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -D_DEBUG -g")
    set(CMAKE_C_FLAGS "-fPIC -Wall -Wextra")
    set(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
    set(CMAKE_C_FLAGS_DEBUG "-O0 -D_DEBUG -g")
    if (XLS21C_STATIC_RUNTIME AND WIN32)
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -static-libgcc -static-libstdc++")
    endif()
elseif (CLANG_COMPILER)
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_FLAGS "-fPIC -Wno-error=unused-command-line-argument")
    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG -flto")
    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -D_DEBUG")
    set(CMAKE_C_FLAGS "-fPIC")
    set(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG -flto")
    set(CMAKE_C_FLAGS_DEBUG "-O0 -D_DEBUG")
else()
    message(FATAL_ERROR "Unsupported compiler")
endif()

include_directories("${CMAKE_SOURCE_DIR}/1C_include")
include_directories("${CMAKE_SOURCE_DIR}/include")

add_subdirectory(src)
